--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <mainClass>com.github.hanyaeger.tutorial.PVZ</mainClass>
+                    <mainClass>oopd.pvz.PVZ</mainClass>
                 </configuration>
             </plugin>
         </plugins>
